# rustify

./: .gcloudignore  .gitignore  Cargo.toml  README.md  app.yaml  index.html
frontend/: index.html
frontend/src/: main.rs
spotify-api/: Cargo.toml  Dockerfile
spotify-api/src/: main.rs
src/: main.rs
