[package]
name = "rustify-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo-net = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"   # <-- needed for spawn_local
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Location"] }
urlencoding = "2"
wasm-logger = "0.2"
log = "0.4"
