[package]
name = "spotify-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.2"
anyhow = "1.0"
http = "0.2"
tower = "0.4"
